--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mocha": "^9.1.3",
     "mongoose": "^6.1.1",
     "mongoose-seed": "^0.6.0",
